--- a/playlist/templates/search.html
+++ b/playlist/templates/search.html
@@ -70,7 +70,7 @@
   {% endif %}
   {% else %}
   {% if query %}
-  <p>No exact dong/artist matches for search "{{query}}", sorry.</p>
+  <p>No exact song/artist matches for search "{{query}}", sorry.</p>
   {% endif %}
   {% endif %}
   </div>
