--- a/playlist/templates/scuttle.html
+++ b/playlist/templates/scuttle.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}Dong Orphanage{% endblock %}
+{% block title %}Song Orphanage{% endblock %}
   
   {% load filters %}
   
@@ -39,11 +39,11 @@
     {% if songs.has_previous %}
       <a href="{% url playlist.views.orphans songs.previous_page_number %}">previous</a>
     {% endif %}
-    Orphaned dongs: page {{ songs.number }} of {{ songs.paginator.num_pages }}
+    Orphaned songs: page {{ songs.number }} of {{ songs.paginator.num_pages }}
     {% if songs.has_next %}
       <a href="{% url orphans songs.next_page_number %}">next</a>
     {% endif %}
-    <p>Click on a dong to become the uploader of it. Please only click on dongs you did actually upload for now.</p>
+    <p>Click on a song to become the uploader of it. Please only click on songs you did actually upload for now.</p>
   </div>
     <ul>
       {% for song in songs.object_list %}
