--- a/playlist/templates/song_report.html
+++ b/playlist/templates/song_report.html
@@ -16,13 +16,13 @@
 <h1>Reporting {{song.artist.name}} - {{song.title}}</h1>
 <form action="{% url playlist.views.song_report songid=song.id %}" method="post">
         {% csrf_token %}
-    <p>{{form.corrupt}}  <span style="font-weight: bold;">Corrupt:</span> use if this dong cuts off or has other major problems. If you can, please upload or find a better version and report this as a duplicate instead so we don't lose any juicy statistics.</p>
+    <p>{{form.corrupt}}  <span style="font-weight: bold;">Corrupt:</span> use if this song cuts off or has other major problems. If you can, please upload or find a better version and report this as a duplicate instead so we don't lose any juicy statistics.</p>
     {{form.corrupt.errors}}
-    <p><span style="font-weight: bold;">Duplicate:</span> use if this dong is a duplicate of another dong (different versions of the same dong don't count). Ideally, you should report the lower-quality dong and leave the better one alone. Enter the duplicate dong's id here: {{form.duplicate}} </p>
+    <p><span style="font-weight: bold;">Duplicate:</span> use if this song is a duplicate of another song (different versions of the same song don't count). Ideally, you should report the lower-quality song and leave the better one alone. Enter the duplicate song's id here: {{form.duplicate}} </p>
     {{form.duplicate.errors}}
-    <p>{{form.not_music}} <span style="font-weight: bold;">Not music:</span> use if this dong is obviously not music - essentially the only thing that qualifies for this is spoken word unless you enjoy big annoying arguments that don't achieve anything.</p>
+    <p>{{form.not_music}} <span style="font-weight: bold;">Not music:</span> use if this song is obviously not music - essentially the only thing that qualifies for this is spoken word unless you enjoy big annoying arguments that don't achieve anything.</p>
     {{form.not_music.errors}}
-    <p>{{form.other}} <span style="font-weight: bold;">Other:</span> use for any other reasonable issue with this dong.</p>
+    <p>{{form.other}} <span style="font-weight: bold;">Other:</span> use for any other reasonable issue with this song.</p>
     <p>Any further comments or explanation? {{form.user_note}}</p>
     {{form.user_note.errors}}
     <input type="submit" value="Submit" />
