--- a/playlist/templates/stats.html
+++ b/playlist/templates/stats.html
@@ -5,14 +5,14 @@
 {% block main %}
   <div class="playlist">
 
-  <p><span class="bold">Dongs in database:</span> {{totaldongs}} </p>
+  <p><span class="bold">Songs in database:</span> {{totaldongs}} </p>
   <p><span class="bold">Additions to the playlist:</span> {{totaladds}} </p>
-  <p><span class="bold">Unplayed dongs:</span> {{unplayeddongs}} </p>
+  <p><span class="bold">Unplayed songs:</span> {{unplayeddongs}} </p>
   <p><span class="bold">Registered users:</span> {{totalusers}} </p>
 
 
   {% if populardongs %}
-  <p>Most added dongs:</p>
+  <p>Most added songs:</p>
   <ul>
     {% for dong in populardongs %}
       <li>{{dong}} - {{dong.totaladds}}</li>
@@ -22,7 +22,7 @@
   {% endif %}
 
   {% if votedhidongs %}
-  <p>Highest-rated dongs:</p>
+  <p>Highest-rated songs:</p>
   <ul>
     {% for dong in votedhidongs %}
       <li>{{dong}} - {{dong.avgscore}}</li>
@@ -32,7 +32,7 @@
   {% endif %}
 
   {% if votedlodongs %}
-  <p>Lowest-rated dongs:</p>
+  <p>Lowest-rated songs:</p>
   <ul>
     {% for dong in votedlodongs %}
       <li>{{dong}} - {{dong.avgscore}}</li>
