--- a/playlist/templates/user.html
+++ b/playlist/templates/user.html
@@ -8,14 +8,14 @@
   <p><span class="bold">User status:</span> {{owner.groups.all.0.name}}</p>
   <p><span class="bold">Comments written:</span> {{numcomments}}</p>
   <p><span class="bold">Number of uploads:</span> {{owner.uploads.count}}</p>
-  <p><span class="bold">Number of dongs added to the playlist:</span> {{useradds}}</p>
+  <p><span class="bold">Number of songs added to the playlist:</span> {{useradds}}</p>
   {% if owner.id == viewer %}
     <p><span class="bold">Number of times your uploads have been added by others:</span> {{otheradds}}</p>
   {% else %}
     <p><span class="bold">Number of times user's uploads have been added by others:</span> {{otheradds}}</p>
   {% endif %}
   <p><span class="bold">Number of tokens:</span> {{owner.get_profile.tokens}}</p>
-  <p><span class="bold">Average score for uploaded dongs:</span> {{uploadavg}}</p>  
+  <p><span class="bold">Average score for uploaded songs:</span> {{uploadavg}}</p>  
 
   <p>
     <a id="menuitem" href="{% url playlist.views.search %}?query=favourites%3D{{owner.username}}">
